--- a/project/public/index.html
+++ b/project/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
+
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
